NLP TP/texts/robotics/robotics.stackexchange_0000073334.txt
Q:

What does this error message mean?

I am sure  not sure why this is occuring, could some elaborate why i am getting this error message...
/opt/ros/indigo/include/ros/console.h:342: error: no matching function for call to 'print(int, void*&, ros::console::Level&, const char [82], int, const char [60], std::string&)'
     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)

I tried to comment out my code, but can't seem locate where or what it is troubled with?
^

Originally posted by 215 on ROS Answers with karma: 156 on 2016-04-13
Post score: 0

Original comments
Comment by Airuno2L on 2016-04-13:
You might want to include your code also.

A:

I deleted the build and devel folder, and ran catkin_make again.

Originally posted by 215 with karma: 156 on 2016-04-13
This answer was ACCEPTED on the original site
Post score: 0

